# ezy

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile.env  README.md
cmake/: Config.cmake.in
doc/: install.md
doc/discussion/: components.md  design_principles.md  redefining_standard_names.md  result_rationale.md
doc/howto/: 01_feature.md
doc/tutorial/: 01_strong_type.md  02_features.md  02_iterable.md  03_iterable.md  04_algorithm.md  04_extended_type.md  05_algorithm.md  06_optional.md  07_result.md  08_nullable.md
examples/: CMakeLists.txt
examples/howto/: 01_feature.cc  CMakeLists.txt
examples/tutorial/: 01_strong_type.cc  02_features.cc  03_extended_type.cc  03_iterable_feature.cc  04_algorithm.cc  05_algorithm.cc  06_optional.cc  07_result.cc  08_nullable.cc  CMakeLists.txt
include/: CMakeLists.txt
include/ezy/: Enumeration.h  algorithm  algorithm.h  always_false.h  apply.h  arithmetic.h  bits_algorithm.h  bits_empty_size.h  bits_find.h  compose.h  concepts.h  constructor.h  custom_find.h  dereference.h  empty.h  feature.h  identity.h  invoke.h  math.h  optional  optional.h  overloaded.h  pipe.h  pointer.h  range.h  result  result.h  size.h  string.h  strong_type  strong_type.h  strong_type_traits.h  tuple_traits  tuple_traits.h  tuple_traits.hh  type_traits.h  typelist_traits.h  utility.h  variant  variant.h
include/ezy/algorithm/: accumulate.h  all_of.h  any_of.h  at.h  checked_index.h  chunk.h  collect.h  concatenate.h  contains.h  cycle.h  drop.h  enumerate.h  filter.h  find_element.h  flatten.h  for_each.h  index.h  iterate.h  join.h  none_of.h  range.h  repeat.h  reverse.h  slice.h  split.h  step.h  take.h  transform.h  zip.h
include/ezy/bits/: algorithm.h  dependent_forward.h  empty_size.h  find.h  optional_like_value.h  priority_tag.h  range_utils.h  reverse_range_view.h  tuple.h
include/ezy/experimental/: apply_each.h  compose.h  function.h  keeper.h  tuple_algorithm.h  value_provider.h
include/ezy/features/: algo_custom_find.h  algo_find.h  algo_iterable.h  arithmetic.h  common.h  invocable.h  iterable.h  nullable.h  nullable_result.h  printable.h  result_interface.h  std_optional.h  std_variant.h  visitable.h
include/ezy/math/: abs.h  clamp.h  max.h  min.h
tests/: CMakeLists.txt  algorithm.cc  algorithm_reverse.cc  apply.cc  common.h  constructor.cc  custom_finder.cc  ezy.cc  invoke.cc  iterable_feature.cc  join_as_strings.h  keeper.cc  math.cc  nullable_feature.cc  operators.cc  strong_type_traits.cc  to_string.cc  tuple_traits.cc
